# wagtail-template

./: .dockerignore  .env.example  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Procfile  README.md  compose.yml  fly.toml  heroku.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: heroku.yml
wagtail_template/: urls.py  wsgi.py
wagtail_template/settings/: base.py  dev.py  staging.py
wagtail_template/templates/: base.html
wagtail_template/utils/: apps.py
wagtail_template/utils/management/commands/: create_bucket.py
