[tool.poetry]
name = "wagtail_template"
version = "0.1.0"
description = ""
authors = ["boggs <hello@boggs.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.12"
Django = "^4.0"
wagtail = "^2.16"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
whitenoise = "^6.0.0"
sentry-sdk = "^1.5.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
