[tool.poetry]
name = "wagtail_template"
version = "0.1.0"
description = ""
authors = ["boggs <hello@boggs.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.13"
Django = "^4.0"
wagtail = "^3.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
whitenoise = "^6.0.0"
sentry-sdk = "^1.5.9"
django-extensions = "^3.1.5"
django-storages = "^1.12.3"
boto3 = "^1.21.41"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
bandit = "^1.7.4"
detect-secrets = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
